* changed the mailSever.sendmail() to use the alert address as the to/from.
* removed an old instance of code from src.core, no longer needed
* added check for open relay to != None versus != ""
* added new started to write_log message "Artillery has started successfully"
* added ability to remove the default port check for the SSH harden config script, you can now turn this to off

~~~~~~~~~~~~~~~~~~~~~~
version 0.7
~~~~~~~~~~~~~~~~~~~~~~

* changed everything over to github versus subversion
* fixed installer to use github versus subversion
* Artillery now stores logfiles for posix (nix based) in a syslog format. 
* You can now specify a local or remote syslog server in the config file
* Bug fix for setup file would cause makedirs error, should be fixed

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.7
~~~~~~~~~~~~~~~~~~~~~~

* if monitoring is turned off, it will not import the module

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.6
~~~~~~~~~~~~~~~~~~~~~~

* fixed a typo that would cause artillery not to start in some cases
* added folder create for src/program_junk and databases/ during installation of artillery

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.5
~~~~~~~~~~~~~~~~~~~~~~

* added new config option to disable root checks

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.4
~~~~~~~~~~~~~~~~~~~~~~

* Added the ability to detect what ports are being blocked via artillery honeypot (thanks spoonman)
* Changed README to README.txt to fix an OSX bug

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.3
~~~~~~~~~~~~~~~~~~~~~~

* Move over to github

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.2
~~~~~~~~~~~~~~~~~~~~~~

* Added better error handling around the threat intelligence feed
* Added a better cleanup for Artlilery when uninstalling
* Fixed a bug that caused Artillery to error out if banlist.txt was not found

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.1
~~~~~~~~~~~~~~~~~~~~~~

* bugfix that would cause thread to die under certain circumstances
* added terms to the banlist.txt file